moved navlinks to right, vaguely fixed alignment. could be better tho

--- a/static/style.css
+++ b/static/style.css
@@ -2,12 +2,14 @@ ul[class="header"]  {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 120%;
+    width: 100%;
     overflow: hidden;
 }
 
 li[class="header"] {
-    float: left;
+    float: right;
+    padding:5px;
+    padding-right:10px;
 }
 
 a:link, a:visited {
@@ -16,8 +18,9 @@ a:link, a:visited {
 	    color: white;
 	    background-color: black;
 	    text-align: center;
-	    padding: 10px;
+	    padding: 5px;
 	    text-decoration: none;
+	    font-family: Arial;
 	  
 	}
 
@@ -27,10 +30,12 @@ a:hover, a:active {
 
 #container {
     margin: auto;
-    width: 50%;
+    width: 70%;
     //border: 5px solid black;
 }
-
+#nav {
+    background-color:black;
+}
 #banner {
     height: 260px;
     //background: url("../static/apictionary.png") no-repeat;
